# RunProof

./: .gitignore  README.md  pyproject.toml
examples/: fileprobe_assert_demo.py  fileprobe_demo.py  simple.py
src/runproof/: __init__.py  _core.py  cli.py  contract.py  probes.py
tests/: test_runproof.py
